--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -87,6 +87,14 @@ layout: default
         </div>
         {% endif %}
 
+        --------------------------
+
+        <a align="left" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+        <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" alt="Buy me a coffee" align="left" style="height: 60px !important;width: 217px !important;"/>
+        </a>  
+
+        --------------------------
+
         <!-- tags -->
         {% if page.tags.size > 0 %}
         <div class="post-tags">
