updating buymeacoffee location <RnD>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -87,14 +87,6 @@ layout: default
         </div>
         {% endif %}
 
-        --------------------------
-
-        <a align="left" href="https://www.buymeacoffee.com/ajalex" target="_blank">
-        <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" alt="Buy me a coffee" align="left" style="height: 60px !important;width: 217px !important;"/>
-        </a>  
-
-        --------------------------
-
         <!-- tags -->
         {% if page.tags.size > 0 %}
         <div class="post-tags">
@@ -107,6 +99,14 @@ layout: default
           {% endfor %}
           </div>
         {% endif %}
+        
+      <center>
+        <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+          <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
+          alt="Buy me a coffee" align="left" 
+          style="height: 60px !important;width: 217px !important;"/>
+        </a>
+      </center>
 
         <div class="post-tail-bottom
           d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
