--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,14 +99,14 @@ layout: default
           {% endfor %}
           </div>
         {% endif %}
-        
-      <center>
+      
+        <div class="buymeacoffee">
         <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
           <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
           alt="Buy me a coffee" align="left" 
           style="height: 60px !important;width: 217px !important;"/>
         </a>
-      </center>
+      </div>
       <br/>
 
         <div class="post-tail-bottom
