updating buymeacoffee location <RnD>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,18 +100,17 @@ layout: default
           </div>
         {% endif %}
       
+        <div class="buymeacoffee align-items-center">
+        <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+          <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
+          alt="Buy me a coffee" align="left" 
+          style="height: 60px !important;width: 217px !important;"/>
+        </a>
+      </div>
+      <br/>
 
         <div class="post-tail-bottom
           d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
-          <div class="buymeacoffee">
-            <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
-              <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
-              alt="Buy me a coffee" align="left" 
-              style="height: 60px !important;width: 217px !important;"/>
-            </a>
-          </div>
-          <br/>
-    
           {% if site.data.rights.license %}
           <div class="license-wrapper">
             This post is licensed under
