--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,7 +100,7 @@ layout: default
           </div>
         {% endif %}
       
-        <div class="buymeacoffee align-items-center">
+        <div class="buymeacoffee d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
         <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
           <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
           alt="Buy me a coffee" align="left" 
