--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,18 +99,16 @@ layout: default
           {% endfor %}
           </div>
         {% endif %}
-      
-        <div class="buymeacoffee d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
-        <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
-          <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
-          alt="Buy me a coffee" align="left" 
-          style="height: 60px !important;width: 217px !important;"/>
-        </a>
-      </div>
-      <br/>
 
         <div class="post-tail-bottom
-          d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
+          d-flex justify-content-between align-items-center mt-2 pt-5 pb-2">
+          <div class="buymeacoffee">
+            <a align="center" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+              <img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" 
+              alt="Buy me a coffee" align="left" 
+              style="height: 60px !important;width: 217px !important;"/>
+            </a>
+          </div>
           {% if site.data.rights.license %}
           <div class="license-wrapper">
             This post is licensed under
